--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
     "require": {
         "team-reflex/discord-php": "^7.3",
         "vlucas/phpdotenv": "^5.5"
+    },
+    "require-dev": {
+        "rector/rector": "^0.19.5"
     }
 }
